# internal/docs/swagger.yaml
@@ -12,9 +12,31 @@ definitions:
         maxLength: 50
         minLength: 2
         type: string
+      password:
+        minLength: 6
+        type: string
     required:
     - email
     - name
+    - password
+    type: object
+  models.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        minLength: 6
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  models.LoginResponse:
+    properties:
+      token:
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
     type: object
   models.UpdateUserRequest:
     properties:
@@ -27,6 +49,9 @@ definitions:
       name:
         maxLength: 50
         minLength: 2
+        type: string
+      password:
+        minLength: 6
         type: string
     type: object
   models.User:
@@ -45,11 +70,15 @@ definitions:
         maxLength: 50
         minLength: 2
         type: string
+      password:
+        minLength: 6
+        type: string
       updated_at:
         type: string
     required:
     - email
     - name
+    - password
     type: object
   response.Response:
     properties:
@@ -85,6 +114,45 @@ info:
   title: Go Startup API
   version: "1.0"
 paths:
+  /api/v1/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: 用户登录并获取JWT令牌
+      parameters:
+      - description: 登录信息
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 登录成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.LoginResponse'
+              type: object
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: 邮箱或密码错误
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 用户登录
+      tags:
+      - auth
   /api/v1/users:
     get:
       consumes:
@@ -104,10 +172,16 @@ paths:
                     $ref: '#/definitions/models.User'
                   type: array
               type: object
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/response.Response'
         "500":
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: 获取所有用户
       tags:
       - users
@@ -138,10 +212,16 @@ paths:
           description: 请求参数错误
           schema:
             $ref: '#/definitions/response.Response'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/response.Response'
         "500":
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: 创建新用户
       tags:
       - users
@@ -149,7 +229,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: 根据用户ID删除用户记录
+      description: 根据用户ID删除用户
       parameters:
       - description: 用户ID
         in: path
@@ -167,6 +247,10 @@ paths:
           description: 请求参数错误
           schema:
             $ref: '#/definitions/response.Response'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/response.Response'
         "404":
           description: 用户不存在
           schema:
@@ -175,6 +259,8 @@ paths:
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: 删除用户
       tags:
       - users
@@ -204,6 +290,10 @@ paths:
           description: 请求参数错误
           schema:
             $ref: '#/definitions/response.Response'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/response.Response'
         "404":
           description: 用户不存在
           schema:
@@ -212,6 +302,8 @@ paths:
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: 获取单个用户
       tags:
       - users
@@ -255,6 +347,8 @@ paths:
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: 更新用户信息
       tags:
       - users
